# barcoders

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.md.new  TODO  index.html  search-index.js
barcoders/: index.html  sidebar-items.js
barcoders/error/: enum.Error.html  index.html  sidebar-items.js  type.Result.html
barcoders/generators/: index.html  sidebar-items.js
barcoders/sym/: index.html  sidebar-items.js
enum_primitive/: enum.Option.html
flate2/: enum.Compression.html  enum.Flush.html  enum.Status.html  index.html  struct.Compress.html  struct.DataError.html  struct.Decompress.html  struct.GzBuilder.html  struct.GzHeader.html  trait.FlateReadExt.html  trait.FlateWriteExt.html
glob/: fn.glob.html  fn.glob_with.html  index.html  struct.GlobError.html  struct.MatchOptions.html  struct.Paths.html  struct.Pattern.html  struct.PatternError.html  type.GlobResult.html
image/: enum.ColorType.html  enum.DynamicImage.html  enum.ImageError.html  enum.ImageFormat.html  fn.load.html  fn.load_from_memory.html  fn.load_from_memory_with_format.html  fn.open.html  fn.save_buffer.html  struct.Frame.html  struct.Frames.html  struct.ImageBuffer.html  struct.Luma.html  struct.LumaA.html  struct.MutPixels.html  struct.Pixels.html  struct.Rgb.html  struct.Rgba.html  struct.SubImage.html  trait.ConvertBuffer.html  trait.GenericImage.html  trait.ImageDecoder.html  trait.Pixel.html  trait.Primitive.html  type.GrayAlphaImage.html  type.GrayImage.html  type.ImageResult.html  type.RgbImage.html  type.RgbaImage.html
miniz_sys/: fn.mz_crc32.html  struct.mz_stream.html
png/: constant.TRANSFORM_BGR.html  constant.TRANSFORM_EXPAND.html  constant.TRANSFORM_EXPAND_16.html  constant.TRANSFORM_GRAY_TO_RGB.html  constant.TRANSFORM_IDENTITY.html  constant.TRANSFORM_INVERT_ALPHA.html  constant.TRANSFORM_INVERT_MONO.html  constant.TRANSFORM_PACKING.html  constant.TRANSFORM_PACKSWAP.html  constant.TRANSFORM_SCALE_16.html  constant.TRANSFORM_SHIFT.html  constant.TRANSFORM_STRIP_16.html  constant.TRANSFORM_STRIP_ALPHA.html  constant.TRANSFORM_STRIP_FILLER.html  constant.TRANSFORM_STRIP_FILLER_AFTER.html  constant.TRANSFORM_STRIP_FILLER_BEFORE.html  constant.TRANSFORM_SWAP_ALPHA.html  constant.TRANSFORM_SWAP_ENDIAN.html  index.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: error.rs  generators.rs  lib.rs  sym.rs
(+213 files in other folders)
