[package]
name = "barcoders"
version = "1.0.4"
edition = "2021"
authors = ["Andrew Buntine <info@bunts.io>"]
description = "A barcode-encoding library"
homepage = "https://github.com/buntine/barcoders"
repository = "https://github.com/buntine/barcoders"
documentation = "https://docs.rs/barcoders"
readme = "README.md"
keywords = ["barcode", "barcodes", "barcode-encoding"]
license = "MIT OR Apache-2.0"
exclude = [
    "media/*",
    "TODO",
]

[features]
default = ["ascii", "json", "svg", "std"]
ascii = []
json = []
svg = []
image = ["dep:image"]
std = []

[dependencies.image]
version = "0.25"
optional = true
