[package]
name = "barcoders"
version = "2.0.0"
edition = "2021"
authors = ["Andrew Buntine <info@bunts.io>"]
description = "A barcode-encoding library"
homepage = "https://github.com/buntine/barcoders"
repository = "https://github.com/buntine/barcoders"
documentation = "https://docs.rs/barcoders"
readme = "README.md"
keywords = ["barcode", "barcodes", "barcode-encoding"]
license = "MIT OR Apache-2.0"
exclude = [
    "media/*",
    "TODO",
]

[features]
# default = ["ascii", "json", "svg", "nightly", "alloc"]
default = ["ascii", "json", "svg", "std"]

ascii = []
json = []
svg = []
image = ["std", "dep:image"] # Uses std::io

unsafety = [] # For faster (unsafe) implementations
nightly = [] # for error_in_core feature
alloc = [] # For vec and string
std = ["alloc"] # std is a superset of alloc

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["gif", "png", "webp"]
